Buf fix / scrollbar

--- a/src/Components/Sneakers/Sneakers.css
+++ b/src/Components/Sneakers/Sneakers.css
@@ -134,6 +134,23 @@ h1 {
 
 /* SNEAKERS END */
 
+/* SCROLLBAR END */
+
+.productContainer::-webkit-scrollbar {
+  height: 8px;             
+}
+
+.productContainer::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 25px;
+}
+
+.productContainer::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+/* SCROLLBAR END */
+
 /* MENU START */
 
 .buttonContainer {
